将主页其他界面由activity改为fragment、加入各种动画、圆形头像由自写类改为手动遮罩（滑稽）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,14 +27,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.DownloadActivity"
-            android:launchMode="singleTask" />
+            android:name=".ui.MenuActivity"/>
         <activity
-            android:name=".ui.MenuActivity"
-            android:launchMode="singleTask" />
-        <activity
-            android:name=".ui.LoginActivity"
-            android:launchMode="singleTask" />
+            android:name=".ui.LoginActivity" />
 
     </application>
 
