--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'//okhttp
     implementation 'com.google.zxing:core:3.3.0'//二维码
 
+    implementation 'de.hdodenhof:circleimageview:2.2.0'//圆形imageview
+
 }
