设置和关于的一堆。。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -23,13 +23,17 @@
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".ui.MenuActivity" />
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.FollowmeActivity" />
-
+        <activity android:name=".ui.SupportActivity" />
+        <activity android:name=".ui.JoinqqActivity" />
+        <activity android:name=".ui.OpensourceActivity"/>
+        <activity android:name=".ui.AboutActivity" />
     </application>
 
 </manifest>
