--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     implementation 'tyrant:heartlayout:1.0.1'//heart泡泡
     implementation 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'//水滴状下拉刷新
     implementation 'com.android.support:cardview-v7:26.1.0'//cardview
+    implementation 'org.jsoup:jsoup:1.11.3'//jsoup解析网页
 
 }
