--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         </activity>
         <activity android:name=".ui.MenuActivity" />
         <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".ui.VideodetailsActivity"/>
+
         <activity android:name=".ui.FollowmeActivity" />
         <activity android:name=".ui.SupportActivity" />
         <activity android:name=".ui.JoinqqActivity" />
