--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher"
+        android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -35,7 +35,8 @@
         <activity android:name=".ui.JoinqqActivity" />
         <activity android:name=".ui.OpensourceActivity" />
         <activity android:name=".ui.AboutActivity" />
-        <activity android:name=".ui.QRActivity"></activity>
+        <activity android:name=".ui.QRActivity" />
+        <activity android:name=".ui.ImgActivity"></activity>
     </application>
 
 </manifest>
