--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
+    <uses-feature android:name="android.hardware.type.watch" />
+
     <application
-        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher"
@@ -40,7 +41,7 @@
         <activity android:name=".ui.LogsoffActivity" />
         <activity android:name=".ui.FavorvideoActivity" />
         <activity android:name=".ui.OtheruserActivity" />
-        <activity android:name=".ui.SueActivity"></activity>
+        <activity android:name=".ui.SueActivity"/>
     </application>
 
 </manifest>
