增加在线观看API，默认480P 增加在线播放逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".ui.FavorvideoActivity" />
         <activity android:name=".ui.OtheruserActivity" />
         <activity android:name=".ui.SueActivity"/>
+        <activity android:name=".ui.OnlinePlayActivity"/>
     </application>
 
 </manifest>
