增加视频详情界面热门评论显示 增加可以评论动态和视频 增加评论可以使用语音识别 增加搜索可以使用语音识别 增加搜索界面显示搜索热词 修复动态用户头像过大内存溢出问题 优化收藏夹标题超过一行用省略号表示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,8 +41,9 @@
         <activity android:name=".ui.LogsoffActivity" />
         <activity android:name=".ui.FavorvideoActivity" />
         <activity android:name=".ui.OtheruserActivity" />
-        <activity android:name=".ui.SueActivity"/>
-        <activity android:name=".ui.OnlinePlayActivity"/>
+        <activity android:name=".ui.SueActivity" />
+        <activity android:name=".ui.OnlinePlayActivity" />
+        <activity android:name=".ui.ReplyActivity" />
     </application>
 
 </manifest>
