--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "cn.luern0313.wristbilibili"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
 
@@ -46,5 +46,6 @@ dependencies {
     implementation 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'//水滴状下拉刷新
     implementation 'com.android.support:cardview-v7:26.1.0'//cardview
     implementation 'org.jsoup:jsoup:1.11.3'//jsoup解析网页
+    //implementation 'com.ticwear:mobvoi-api:1.1.1'//ticwear
 
 }
