--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'//cardview
     implementation 'org.jsoup:jsoup:1.11.3'//jsoup解析网页
     //implementation 'com.ticwear:mobvoi-api:1.1.1'//ticwear
+    implementation 'me.panpf:sketch:2.7.0'//photoview
 
 }
