--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".ui.SueActivity" />
         <activity android:name=".ui.OnlinePlayActivity" />
         <activity android:name=".ui.ReplyActivity" />
+        <activity android:name=".ui.TailActivity"></activity>
     </application>
 
 </manifest>
