看动态和楼中楼的评论，不出意外就是1.4发行版了（别问我为什么没有1.2和1.3）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,9 @@
         <activity android:name=".ui.SueActivity" />
         <activity android:name=".ui.OnlinePlayActivity" />
         <activity android:name=".ui.ReplyActivity" />
-        <activity android:name=".ui.TailActivity"></activity>
+        <activity android:name=".ui.TailActivity" />
+        <activity android:name=".ui.TextActivity" />
+        <activity android:name=".ui.CheckreplyActivity"></activity>
     </application>
 
 </manifest>
