上次更新是什么时候来着。。？

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
         <activity android:name=".ui.CheckreplyActivity" />
         <activity android:name=".ui.PlayerActivity" />
         <activity android:name=".ui.SendDynamicActivity" />
+        <activity android:name=".ui.SelectPartActivity"></activity>
     </application>
 
 </manifest>
