--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <activity android:name=".ui.ImgActivity" />
         <activity android:name=".ui.LogsoffActivity" />
         <activity android:name=".ui.FavorvideoActivity" />
-        <activity android:name=".ui.OtheruserActivity" />
+        <activity android:name=".ui.OtherUserActivity" />
         <activity android:name=".ui.SueActivity" />
         <activity android:name=".ui.ReplyActivity" />
         <activity android:name=".ui.TailActivity" />
