增加番剧页面中。。（30%）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
         <activity android:name=".ui.CheckreplyActivity" />
         <activity android:name=".ui.PlayerActivity" />
         <activity android:name=".ui.SendDynamicActivity" />
-        <activity android:name=".ui.SelectPartActivity"></activity>
+        <activity android:name=".ui.SelectPartActivity" />
+        <activity android:name=".ui.BangumiActivity"></activity>
     </application>
 
 </manifest>
