增加番剧页面中。。（55%）,修复排行榜和推荐中item没有点击波纹的问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         <activity android:name=".ui.PlayerActivity" />
         <activity android:name=".ui.SendDynamicActivity" />
         <activity android:name=".ui.SelectPartActivity" />
-        <activity android:name=".ui.BangumiActivity"></activity>
+        <activity android:name=".ui.BangumiActivity"/>
     </application>
 
 </manifest>
