--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     defaultConfig {
         applicationId "cn.luern0313.wristbilibili"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 13
         versionName "2.6"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
     //compileOptions {
@@ -22,6 +22,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        disable 'GoogleAppIndexingWarning'
+    }
 }
 
 dependencies {
@@ -30,22 +33,22 @@ dependencies {
     //}
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'//v7包
-    implementation 'com.android.support:design:26.1.0'//editview
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'//okhttp
-    implementation 'com.google.zxing:core:3.4.0'//二维码
-    implementation 'de.hdodenhof:circleimageview:2.2.0'//圆形imageview
-    implementation 'cn.carbs.android:ExpandableTextView:1.0.3'//折叠textview
-    implementation 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'//水滴状下拉刷新
-    implementation 'com.android.support:cardview-v7:26.1.0'//cardview
-    implementation 'org.jsoup:jsoup:1.11.3'//jsoup解析网页
-    //implementation 'com.ticwear:mobvoi-api:1.1.1'//ticwear
-    implementation 'me.panpf:sketch:2.7.0'//photoview
-    implementation 'com.liulishuo.filedownloader:library:1.7.7'//下载服务
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.google.zxing:core:3.4.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'cn.carbs.android:ExpandableTextView:1.0.3'
+    implementation 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'org.jsoup:jsoup:1.11.3'
+    implementation 'me.panpf:sketch:2.7.0'
+    implementation 'com.liulishuo.filedownloader:library:1.7.7'
+    implementation 'com.airbnb.android:lottie:3.3.1'
 }
