--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="cn.luern0313.wristbilibili">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,9 +14,12 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:targetApi="n">
+
         <meta-data
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
@@ -54,7 +58,8 @@
         <activity android:name=".ui.PlayerActivity" />
         <activity android:name=".ui.SendDynamicActivity" />
         <activity android:name=".ui.SelectPartActivity" />
-        <activity android:name=".ui.BangumiActivity"/>
+        <activity android:name=".ui.BangumiActivity" />
+        <activity android:name=".ui.ArticleActivity"/>
     </application>
 
 </manifest>
