--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,13 @@
     <uses-feature android:name="android.hardware.type.watch" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@drawable/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_new_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="n">
-        <activity android:name=".ui.UnsupportedLinkActivity"></activity>
 
         <meta-data
             android:name="com.google.android.wearable.standalone"
@@ -40,7 +39,7 @@
         </activity>
         <activity android:name=".ui.MenuActivity" />
         <activity android:name=".ui.LoginActivity" />
-        <activity android:name=".ui.VideodetailsActivity" />
+        <activity android:name=".ui.VideoActivity" />
         <activity android:name=".ui.FollowmeActivity" />
         <activity android:name=".ui.SupportActivity" />
         <activity android:name=".ui.JoinqqActivity" />
@@ -50,7 +49,7 @@
         <activity android:name=".ui.ImgActivity" />
         <activity android:name=".ui.LogsoffActivity" />
         <activity android:name=".ui.FavorvideoActivity" />
-        <activity android:name=".ui.OtherUserActivity" />
+        <activity android:name=".ui.UserActivity" />
         <activity android:name=".ui.SueActivity" />
         <activity android:name=".ui.ReplyActivity" />
         <activity android:name=".ui.TailActivity" />
@@ -61,6 +60,18 @@
         <activity android:name=".ui.SelectPartActivity" />
         <activity android:name=".ui.BangumiActivity" />
         <activity android:name=".ui.ArticleActivity" />
+        <activity android:name=".ui.UnsupportedLinkActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="bilibili" />
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
