--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,15 @@
     <uses-feature android:name="android.hardware.type.watch" />
 
     <application
+        android:name=".util.MyApplication"
         android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_new_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:targetApi="n">
+        tools:targetApi="n"
+        android:allowBackup="false">
 
         <meta-data
             android:name="com.google.android.wearable.standalone"
