--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,15 @@
 
     <application
         android:name=".util.MyApplication"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_new_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:targetApi="n"
         tools:replace="android:allowBackup"
-        android:allowBackup="false">
+        tools:targetApi="n">
 
         <meta-data
             android:name="com.google.android.wearable.standalone"
@@ -75,6 +75,7 @@
                 <data android:scheme="https" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.DynamicDetailActivity"/>
     </application>
 
 </manifest>
