基本的主题更换支持

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.DynamicDetailActivity"/>
+        <activity android:name=".ui.ThemeActivity"/>
     </application>
 
 </manifest>
