--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
         }
     }
     lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
         disable 'GoogleAppIndexingWarning'
     }
 }
@@ -37,20 +39,20 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.google.zxing:core:3.4.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'cn.carbs.android:ExpandableTextView:1.0.3'
     implementation 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'
-    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'me.panpf:sketch:2.7.0'
     implementation 'com.liulishuo.filedownloader:library:1.7.7'
@@ -62,5 +64,5 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.16.18'
     implementation 'javax.annotation:javax.annotation-api:1.2'
 
-    //implementation 'cn.luern0313.lson:Lson:0.3'
+    //implementation 'cn.luern0313.lson:Lson:0.6'
 }
